tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-use.stderr
error[E0635]: unknown feature `const_cmp`
  --> $DIR/derive-const-use.rs:2:30
   |
LL | #![feature(const_trait_impl, const_cmp, const_default_impls, derive_const)]
   |                              ^^^^^^^^^

error[E0635]: unknown feature `const_default_impls`
  --> $DIR/derive-const-use.rs:2:41
   |
LL | #![feature(const_trait_impl, const_cmp, const_default_impls, derive_const)]
   |                                         ^^^^^^^^^^^^^^^^^^^

error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-use.rs:6:12
   |
LL | impl const Default for A {
   |            ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-use.rs:10:12
   |
LL | impl const PartialEq for A {
   |            ^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-use.rs:14:16
   |
LL | #[derive_const(Default, PartialEq)]
   |                ^^^^^^^ in this derive macro expansion
  --> $SRC_DIR/core/src/default.rs:LL:COL
   |
   = note: in this expansion of `#[derive(Default)]`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-use.rs:14:25
   |
LL | #[derive_const(Default, PartialEq)]
   |                         ^^^^^^^^^ in this derive macro expansion
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: in this expansion of `#[derive(PartialEq)]`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0635`.
